--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,7 +334,7 @@ nav {    /* contains logo & nav menu */
 }
 
 #question-container {    /* question box */
-    background-image: linear-gradient(to right, #264137, #266340, #3a9561);
+    background-image: linear-gradient(to right, var(--clr-outer-space), var(--clr-deep-moss), var(--clr-sea-green));
     border-radius: 5px;
     box-sizing: border-box;
     display: flex;
