--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,8 @@ body {
 
 #homepage-body {
     box-sizing: border-box;
-    padding: 20vh 0 0;
+    padding: 15vh 0 0;
+    min-height: 320px;
 }
 
 /* homepage logo */
@@ -317,7 +318,7 @@ nav {
     width: 100%;
 }
 
-/* heading for life lines */
+/* heading for lifelines */
 #life-lines > h2 {
     font-size: 1.1rem;
     text-align: center;
