--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -450,7 +450,7 @@ nav {
 
 #page-404-outer-wrapper {
     box-sizing: border-box;
-    padding: 10vh 0 0;
+    padding: 10vh 0 15vh;
 }
 
 #page-404-inner-wrapper {
@@ -459,10 +459,6 @@ nav {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    min-height: 13.5rem;
-    height: 60vh;
-    max-height: 14rem;
-    padding-bottom: 2rem ;
 }
 
 /* heading */
@@ -1083,16 +1079,12 @@ idea taken from CSS-TRICKS website (See readMe for details) */
     }
 
     /* 404 PAGE */
-    #page-404-inner-wrapper {
-        max-height: 16rem;
-    }
-
     #page-404-inner-wrapper > h1 {
-        font-size: 2rem;
+        font-size: 1.8rem;
     }
 
     #page-404-info-box > p {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         padding: 0 5rem;
     }
 
@@ -1299,6 +1291,10 @@ idea taken from CSS-TRICKS website (See readMe for details) */
     }
 
     /* 404 PAGE */
+    #page-404-inner-wrapper > h1 {
+        font-size: 2rem;
+    }
+
     #page-404-info-box > p {
         font-size: 1.5rem;
     }
